unpackaged/main/default/objects/sfsp__SalesNodeMetric__c/sfsp__SalesNodeMetric__c.object-meta.xml
<CustomObject>
    <label>Sales Node Metric</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>