unpackaged/main/default/objects/sfsp__SalesNodeMetric__c/fields/sfsp__SalesMetric__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesMetric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Metric</label>
    <referenceTo>sfsp__SalesMetric__c</referenceTo>
    <relationshipLabel>Sales Node Metrics</relationshipLabel>
    <relationshipName>SalesNodeMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>