unpackaged/main/default/objects/sfsp__SalesNodeMetric__c/fields/sfsp__Target_Month11__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Target_Month11__c</fullName>
    <label>Target Month 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>