unpackaged/main/default/objects/sfsp__SalesNodeMetric__c/fields/sfsp__TargetOverrideAmount__c.field-meta.xml
<CustomField>
    <fullName>sfsp__TargetOverrideAmount__c</fullName>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>