unpackaged/main/default/objects/sfsp__SalesNodeMetric__c/fields/sfsp__TargetOverrideType__c.field-meta.xml
<CustomField>
    <fullName>sfsp__TargetOverrideType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>